--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             z-index: 0;
             border-radius: 10px;
             text-decoration: none;
-            /* Add this line to remove underlines */
+            font-size: 20px;
         }
 
         .res:before {
