--- a/index.html
+++ b/index.html
@@ -143,29 +143,19 @@
             justify-content: space-around;
             margin: 23px 0;
         }
-
-        .leftsection {
-            font-size: 2.5rem;
-            margin: 80px 0;
-        }
-
         .FirstSection>div {
             width: 30%;
         }
-
         .rightsection img {
             width: 100%;
             margin: 25px 0;
         }
-
         .COLOR {
             color: blueviolet;
         }
-
         #element {
             color: blueviolet;
         }
-
         footer {
             display: flex;
             flex-direction: column;
@@ -232,79 +222,35 @@
             margin: 5px 0;
             background-color: #ddd;
         }
-
         .res {
-            display: inline-block;
             width: 220px;
-            height: 40px;
-            text-align: center;
-            line-height: 40px;
-            border: none;
+            height: 35px;
             outline: none;
-            color: #fff;
-            background: rgb(20, 1, 26);
-            cursor: pointer;
             position: relative;
             z-index: 0;
-            border-radius: 10px;
+            display: inline-block;
+            line-height: 40px;
+            background-color: #513883;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
             text-decoration: none;
+            display: inline-block;
             font-size: 20px;
+            cursor: pointer;
+            border-radius: 7px;
         }
-
-        .res:before {
-            content: '';
-            background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-            position: absolute;
-            top: -2px;
-            left: -2px;
-            background-size: 400%;
-            z-index: -1;
-            filter: blur(5px);
-            width: calc(100% + 4px);
-            height: calc(100% + 4px);
-            animation: glowing 20s linear infinite;
-            opacity: 0;
-            transition: opacity .3s ease-in-out;
-            border-radius: 10px;
+        user agent stylesheet
+        a:-webkit-any-link {
+            color: -webkit-link;
+            cursor: pointer;
+            text-decoration: underline;
         }
-
-        .res:active {
-            color: rgb(20, 1, 26)
+        .leftsection {
+            font-size: 2.5rem;
+            margin: 80px 0;
         }
-
-        .res:active:after {
-            background: transparent;
-        }
-
-        .res:hover:before {
-            opacity: 1;
-        }
-
-        .res:after {
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: rgb(20, 1, 26);
-            left: 0;
-            top: 0;
-            border-radius: 10px;
-        }
-
-        @keyframes glowing {
-            0% {
-                background-position: 0 0;
-            }
-
-            50% {
-                background-position: 400% 0;
-            }
-
-            100% {
-                background-position: 0 0;
-            }
-        }
-
         .dropdown-content img {
             height: 20px;
             width: auto;
