--- a/index.html
+++ b/index.html
@@ -705,9 +705,9 @@
                         <li class="dropdown">
                             <a href="#">Work</a>
                             <ul class="dropdown-content">
-                                <li><a href="index.html #certificates">Certification</a></li>
+                                <li><a href="#certificates">Certification</a></li>
                                 <li class="divider"></li>
-                                <li><a href="index.html #project">Projects</a></li>
+                                <li><a href="#project">Projects</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
