--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
                             </ul>
                 </div>
             </nav>
-        </header>
+        </header>v
         <main>
             <section class="FirstSection">
                 <div class="leftsection">
